--- a/goalpyapp/clear_data.ipynb
+++ b/goalpyapp/clear_data.ipynb
@@ -627,7 +627,7 @@
     }
    ],
    "source": [
-    "jogos_do_dia = pd.read_excel(r\"C:\\Users\\Administrador\\Desktop\\projeto_fsc\\base_excel\\jogos_do_dia_trat.xlsx\")\n",
+    "jogos_do_dia = pd.read_excel(r\"C:\\Users\\Alexandre\\OneDrive\\Área de Trabalho\\Projeto Fut\\base_excel\")\n",
     "filtered_df = jogos_do_dia.copy()\n",
     "filtered_df[\"Date\"] = pd.to_datetime(filtered_df[\"Date\"], format=\"%d/%m/%Y\")\n",
     "filtered_df[\"Date\"] = filtered_df[\"Date\"].dt.date\n",
@@ -764,7 +764,7 @@
     "\n",
     "\n",
     "\n",
-    "diretorio_w = r'C:\\Users\\Administrador\\Desktop\\repositorios\\goalpyapp\\dados_csv'\n",
+    "diretorio_w = r'C:\\Users\\Alexandre\\OneDrive\\Área de Trabalho\\Projeto Fut\\goalpyapp\\dados_csv'\n",
     "if not os.path.exists(diretorio_w):\n",
     "    os.makedirs(diretorio_w)\n",
     "\n",
